Add colors variables

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,8 +1,8 @@
 $white: #FFFFFF;
 $black: #000000;
-$colorLink: #025E73;
-$colorLinkHover: #011F26;
-$colorMain: #05407a;
-$colorSecondary: #B4C712;
-$colorGrey: #D1D1D1;
+$colorRed: #8A1C2C;
+$colorYellow: #D6D156;
+$colorMain:#D64157;
+$colorBluePale:#2BA2D6;
+$colorBlue:#226A8A;
 $colorGreyFade: #dee2e6;
