--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -1,7 +1,7 @@
 /* FONT FACES */
 /* Roboto */
 @font-face {
-  font-family: 'Roboto Black';
+  font-family: 'Garamond Bold';
   src: url("../assets/fonts/garamond/EBGaramond-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: 'Roboto BlackItalic';
-  src: url("../fonts/roboto/Roboto-BlackItalic.ttf") format("truetype");
+  src: url("../assets/fonts/garamond/EBGaramond-BoldItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'Roboto Bold';
-  src: url("../fonts/roboto/Roboto-Bold.ttf") format("truetype");
+  src: url("../assets/fonts/garamond/EBGaramond-BoldItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
