--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -1,11 +1,16 @@
 html {
   font-size: 16px;
   font-family: 'granjon';
+  height: 100%;
 }
 body {
   height: 100%;
 }
+h1{
+  font-family: 'Garamond Bold';
+}
 .container {
+  min-height: 940px;
   display: grid;
   grid-template-columns: 1fr 2.5fr 1fr;
   grid-template-rows: 1fr;
@@ -33,5 +38,184 @@ body {
   padding: 10px;
   color: $black;
   @include center;
-  font-size: 5rem;
+  // font-size: 5rem;
+  text-align: center;
+}
+html {
+  font-size: 16px;
+  font-family: 'granjon';
+}
+body {
+  height: 100%;
+}
+.container {
+  display: grid;
+  grid-template-columns: 1fr 2.5fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    ". . .";
+    &__leftside{
+      background-color: $colorBlue;
+      @include flexCenterY;      
+    }
+    &__center{
+      @include flexCenterX;
+      background-color: aliceblue;
+    }
+  &__rightside {
+    background-color:$colorRed;
+    @include flexCenterX;
+  }
+}
+
+.container__leftside-logo{
+  width: 220px;
+}
+.container__leftside-clock {
+  width: 200px;
+  padding: 10px;
+  font-size: 3rem;
+  color: $colorBlue;
+  @include center;
+  text-align: center;
+  border-radius:12px;
+  -webkit-border-radius:12px;
+  -moz-border-radius:12px;
+  -ms-border-radius:12px;
+  -o-border-radius:12px;
+}
+.btn{
+  @include flexCenterX;
+  @include flexCenterY;  
+  margin-top: 1em;
+  color: $colorRed;
+  padding: 5px 7px;
+  background-color: $white;
+  cursor: pointer;
+}
+.input{
+  @include flexCenterX;
+  @include flexCenterY;  
+  margin-top: 1em;
+  color: $colorRed;
+  padding: 5px 7px;
+  background-color: $white;
+  border: none;
+}
+.content-btn{
+  width: 220px;
+  display: flex;
+  margin-bottom: 1em;
+  .start{
+    @extend .btn;
+    width: 150px;
+    margin-right: 1em;
+    border-radius: 5px 0 0 5px;
+    -webkit-border-radius: 5px 0 0 5px;
+    -moz-border-radius: 5px 0 0 5px;
+    -ms-border-radius: 5px 0 0 5px;
+    -o-border-radius: 5px 0 0 5px;
+    &:hover{
+      color: $colorBlue;
+    }
+}
+  .start-submit {
+    @extend .btn;
+    width: 45px;
+    border-radius: 0 5px 5px 0;
+    -webkit-border-radius: 0 5px 5px 0;
+    -moz-border-radius: 0 5px 5px 0;
+    -ms-border-radius: 0 5px 5px 0;
+    -o-border-radius: 0 5px 5px 0;
+    &:hover{
+      color: $colorBlue;
+    }
+    img{
+      width: 100%;
+    }
+  }
+}
+/*Lucky */
+.content-btn{
+  width: 220px;
+  display: flex;
+  margin-bottom: 1em;
+  .lucky{
+    @extend .input;
+    height: 45px;
+    width: 150px;
+    margin-right: 1em;
+    padding: 5px 7px;
+    border: 1px solid $colorGreyFade;
+    border-radius: 5px 0 0 5px;
+    -webkit-border-radius: 5px 0 0 5px;
+    -moz-border-radius: 5px 0 0 5px;
+    -ms-border-radius: 5px 0 0 5px;
+    -o-border-radius: 5px 0 0 5px;
+  }
+  .lucky-submit{
+    @extend .btn;
+    width: 45px;
+    height: 45px;
+    border-radius: 0 5px 5px 0;
+    -webkit-border-radius: 0 5px 5px 0;
+    -moz-border-radius: 0 5px 5px 0;
+    -ms-border-radius: 0 5px 5px 0;
+    -o-border-radius: 0 5px 5px 0;
+  }
+  img {
+    width: 100%;
+  }
+}
+.lucky-label{
+  margin-bottom: -11px;
+  margin-left: -65px;
+  color: $white;
+}
+.content-btn{
+  width: 220px;
+  display: flex;
+  margin-bottom: 1em;
+  .tips{
+    @extend .btn;
+    width: 150px;
+    margin-right: 1em;
+    border-radius: 5px 0 0 5px;
+    -webkit-border-radius: 5px 0 0 5px;
+    -moz-border-radius: 5px 0 0 5px;
+    -ms-border-radius: 5px 0 0 5px;
+    -o-border-radius: 5px 0 0 5px;
+    &:hover{
+      color: $colorBlue;
+    }
+}
+  .tips-submit {
+    @extend .btn;
+    width: 45px;
+    border-radius: 0 5px 5px 0;
+    -webkit-border-radius: 0 5px 5px 0;
+    -moz-border-radius: 0 5px 5px 0;
+    -ms-border-radius: 0 5px 5px 0;
+    -o-border-radius: 0 5px 5px 0;
+    &:hover{
+      color: $colorBlue;
+    }
+    img{
+      width: 100%;
+    }
+  }
+}
+/* RIGHT SIDE */
+.container__rightside {
+  &-score {
+    @extend .input;
+    height: 60px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+  }
+
 }
