--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -19,7 +19,7 @@ a:active {
   text-decoration: none;
 }
 
-figure {
+figure, input {
   margin: 0;
   padding: 0;
 }
@@ -32,4 +32,7 @@ ol {
 
 p {
   margin-bottom: 1rem;
+}
+img {
+  width: 100%;
 }
