--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "assets/css/variables";
 @import "assets/css/mixins";
-// @import "assets/css/fonts";
+@import "assets/css/reset";
+@import "assets/css/fonts";
 @import "assets/css/main";
 @import "assets/css/menu";
 @import "assets/css/header";
