--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -1,32 +1,73 @@
 /* FONT FACES */
-/* Roboto */
+/* GARAMOND */
 @font-face {
   font-family: 'Garamond Bold';
-  src: url("../assets/fonts/garamond/EBGaramond-Bold.ttf") format("truetype");
+  src: url("assets/fonts/garamond/EBGaramond-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Roboto BlackItalic';
-  src: url("../assets/fonts/garamond/EBGaramond-BoldItalic.ttf") format("truetype");
+  font-family: 'Garamond Bold Italic';
+  src: url("assets/fonts/garamond/EBGaramond-BoldItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'Roboto Bold';
-  src: url("../assets/fonts/garamond/EBGaramond-BoldItalic.ttf") format("truetype");
+  font-family: 'Garamond Extra Bold';
+  src: url("assets/fonts/garamond/EBGaramond-ExtraBold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'Roboto BoldItalic';
-  src: url("../fonts/roboto/Roboto-BoldItalic.ttf") format("truetype");
+  font-family: 'Garamond Italic';
+  src: url("assets/fonts/garamond/EBGaramond-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Garamond Medium';
+  src: url("assets/fonts/garamond/EBGaramond-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Garamond Medium Italic';
+  src: url("assets/fonts/garamond/EBGaramond-MediumItalic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Garamond Regular';
+  src: url("assets/fonts/garamond/EBGaramond-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Garamond SemiBold';
+  src: url("assets/fonts/garamond/EBGaramond-SemiBold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Garamond SemiBold Italic';
+  src: url("assets/fonts/garamond/EBGaramond-SemiBoldItalic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+// ROBOTO
+@font-face {
+  font-family: 'Roboto Bold Italic';
+  src: url("assets/fonts/roboto/Roboto-BoldItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -34,7 +75,7 @@
 
 @font-face {
   font-family: 'Roboto Italic';
-  src: url("../fonts/roboto/Roboto-Italic.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -42,7 +83,7 @@
 
 @font-face {
   font-family: 'Roboto Light';
-  src: url("../fonts/roboto/Roboto-Light.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -50,7 +91,7 @@
 
 @font-face {
   font-family: 'Roboto LightItalic';
-  src: url("../fonts/roboto/Roboto-LightItalic.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-LightItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -58,7 +99,7 @@
 
 @font-face {
   font-family: 'Roboto Medium';
-  src: url("../fonts/roboto/Roboto-Medium.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-Medium.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -66,7 +107,7 @@
 
 @font-face {
   font-family: 'Roboto MediumItalic';
-  src: url("../fonts/roboto/Roboto-MediumItalic.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-MediumItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -74,7 +115,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url("../fonts/roboto/Roboto-Regular.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -82,7 +123,7 @@
 
 @font-face {
   font-family: 'Roboto Thin';
-  src: url("../fonts/roboto/Roboto-Thin.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-Thin.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -90,7 +131,7 @@
 
 @font-face {
   font-family: 'Roboto ThinItalic';
-  src: url("../fonts/roboto/Roboto-ThinItalic.ttf") format("truetype");
+  src: url("assets/fonts/roboto/Roboto-ThinItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -99,8 +140,8 @@
 /* Roboto Slab */
 @font-face {
   font-family: 'Roboto-Slab Bold';
-  src: url('../fonts/roboto-slab/RobotoSlab-Bold-webfont.woff') format('woff'),
-    url("../fonts/roboto-slab/RobotoSlab-Bold.ttf") format("truetype");
+  src: url('assets/fonts/roboto-slab/RobotoSlab-Bold-webfont.woff') format('woff'),
+    url("assets/fonts/roboto-slab/RobotoSlab-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -108,8 +149,8 @@
 
 @font-face {
   font-family: 'Roboto-Slab';
-  src: url('../fonts/roboto-slab/RobotoSlab-Regular-webfont.woff') format('woff'),
-    url("../fonts/roboto-slab/RobotoSlab-Regular.ttf") format("truetype");
+  src: url('assets/fonts/roboto-slab/RobotoSlab-Regular-webfont.woff') format('woff'),
+    url("assets/fonts/roboto-slab/RobotoSlab-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -117,8 +158,8 @@
 
 @font-face {
   font-family: 'Roboto-Slab Light';
-  src: url('../fonts/roboto-slab/RobotoSlab-Light-webfont.woff') format('woff'),
-    url("../fonts/roboto-slab/RobotoSlab-Light.ttf") format("truetype");
+  src: url('assets/fonts/roboto-slab/RobotoSlab-Light-webfont.woff') format('woff'),
+    url("assets/fonts/roboto-slab/RobotoSlab-Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -126,8 +167,8 @@
 
 @font-face {
   font-family: 'Roboto-Slab Thin';
-  src: url('../fonts/roboto-slab/RobotoSlab-Thin-webfont.woff') format('woff'),
-    url("../fonts/roboto-slab/RobotoSlab-Thin.ttf") format("truetype");
+  src: url('assets/fonts/roboto-slab/RobotoSlab-Thin-webfont.woff') format('woff'),
+    url("assets/fonts/roboto-slab/RobotoSlab-Thin.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -136,8 +177,8 @@
 /* Playfair Display */
 @font-face {
   font-family: 'PlayfairDisplay-Black';
-  src: url("../fonts/playfair-display/PlayfairDisplay-Black.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplay-Black.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplay-Black.otf") format("opentype"),
+    url("assets/fonts/playfair-display/PlayfairDisplay-Black.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -145,8 +186,8 @@
 
 @font-face {
   font-family: 'PlayfairDisplay-BlackItalic';
-  src: url("../fonts/playfair-display/PlayfairDisplay-BlackItalic.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplay-BlackItalic.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplay-BlackItalic.otf") format("opentype"),
+    url("assets/fonts/playfair-display/PlayfairDisplay-BlackItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -154,8 +195,8 @@
 
 @font-face {
   font-family: 'PlayfairDisplay-Bold';
-  src: url("../fonts/playfair-display/PlayfairDisplay-Bold.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplay-Bold.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplay-Bold.otf") format("opentype"),
+    url("assets/fonts/playfair-display/PlayfairDisplay-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -163,8 +204,8 @@
 
 @font-face {
   font-family: 'PlayfairDisplay-BoldItalic';
-  src: url("../fonts/playfair-display/PlayfairDisplay-BoldItalic.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplay-BoldItalic.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplay-BoldItalic.otf") format("opentype"),
+    url("assets/fonts/playfair-display/PlayfairDisplay-BoldItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -172,8 +213,8 @@
 
 @font-face {
   font-family: 'PlayfairDisplay-Italic';
-  src: url("../fonts/playfair-display/PlayfairDisplay-Italic.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplay-Italic.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplay-Italic.otf") format("opentype"),
+    url("assets/fonts/playfair-display/PlayfairDisplay-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -181,8 +222,8 @@
 
 @font-face {
   font-family: 'PlayfairDisplay-Regular';
-  src: url("../fonts/playfair-display/PlayfairDisplay-Regular.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplay-Regular.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplay-Regular.otf") format("opentype"),
+    url("assets/fonts/playfair-display/PlayfairDisplay-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -190,8 +231,7 @@
 
 @font-face {
   font-family: 'PlayfairDisplaySC-Black';
-  src: url("../fonts/playfair-display/PlayfairDisplaySC-Black.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplaySC-Black.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplaySC-Black.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -199,8 +239,7 @@
 
 @font-face {
   font-family: 'PlayfairDisplaySC-BlackItalic';
-  src: url("../fonts/playfair-display/PlayfairDisplaySC-BlackItalic.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplaySC-BlackItalic.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplaySC-BlackItalic.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -208,8 +247,7 @@
 
 @font-face {
   font-family: 'PlayfairDisplaySC-Bold';
-  src: url("../fonts/playfair-display/PlayfairDisplaySC-Bold.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplaySC-Bold.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplaySC-Bold.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -217,8 +255,7 @@
 
 @font-face {
   font-family: 'PlayfairDisplaySC-BoldItalic';
-  src: url("../fonts/playfair-display/PlayfairDisplaySC-BoldItalic.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplaySC-BoldItalic.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplaySC-BoldItalic.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -226,8 +263,7 @@
 
 @font-face {
   font-family: 'PlayfairDisplaySC-Italic';
-  src: url("../fonts/playfair-display/PlayfairDisplaySC-Italic.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplaySC-Italic.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplaySC-Italic.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -235,8 +271,7 @@
 
 @font-face {
   font-family: 'PlayfairDisplaySC-Regular';
-  src: url("../fonts/playfair-display/PlayfairDisplaySC-Regular.otf") format("opentype"),
-    url("../fonts/playfair-display/PlayfairDisplaySC-Regular.ttf") format("truetype");
+  src: url("assets/fonts/playfair-display/PlayfairDisplaySC-Regular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
