--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -6,3 +6,4 @@ $colorMain:#D64157;
 $colorBluePale:#2BA2D6;
 $colorBlue:#226A8A;
 $colorGreyFade: #dee2e6;
+$president: Adolphe-Thiers Alain-Poher Albert-Lebrun Alexandre-Millerand;
