--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -1,53 +1,50 @@
 html {
   font-size: 16px;
-  font-family: 'granjon';
-  height: 100%;
+  font-family: 'Roboto';
+  height: 100vh;
 }
+
 body {
-  height: 100%;
+
 }
-h1{
-  font-family: 'Garamond Bold';
+
+h1 {
+  font-family: 'Garamond Medium';
+  font-weight: 400;
+  color: aliceblue;
 }
+
 .container {
-  min-height: 940px;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 2.5fr 1fr;
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-template-areas:
     ". . .";
-    &__leftside{
-      background-color: $colorBlue;
-      @include flexCenterY;
-    }
-    &__center{
-      @include flexCenterX;
-      background-color: aliceblue;
-    }
+
+  &__leftside {
+    background-color: $colorBlue;
+    @include flexCenterY;
+  }
+
+  &__center {
+    @include flexCenterX;
+    background-color: aliceblue;
+  }
+
   &__rightside {
-    background-color:$colorRed;
+    background-color: $colorRed;
     @include flexCenterX;
   }
 }
 
-.container__leftside-logo{
+.container__leftside-logo {
   width: 220px;
 }
-.container__leftside-clock {
-  padding: 10px;
-  color: $black;
-  @include center;
-  // font-size: 5rem;
-  text-align: center;
-}
-html {
-  font-size: 16px;
-  font-family: 'granjon';
-}
-body {
-  height: 100%;
-}
+
+
+
 .container {
   display: grid;
   grid-template-columns: 1fr 2.5fr 1fr;
@@ -55,59 +52,69 @@ body {
   gap: 0px 0px;
   grid-template-areas:
     ". . .";
-    &__leftside{
-      background-color: $colorBlue;
-      @include flexCenterY;      
-    }
-    &__center{
-      @include flexCenterX;
-      background-color: aliceblue;
-    }
-  &__rightside {
-    background-color:$colorRed;
+
+  &__leftside {
+    background-color: $colorBlue;
+    @include flexCenterY;
+  }
+
+  &__center {
     @include flexCenterX;
+    background-color: aliceblue;
+  }
+
+  &__rightside {
+    background-color: $colorRed;
+    justify-content: end;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
-.container__leftside-logo{
+.container__leftside-logo {
   width: 220px;
 }
+
 .container__leftside-clock {
   width: 200px;
   padding: 10px;
   font-size: 3rem;
   color: $colorBlue;
-  @include center;
   text-align: center;
-  border-radius:12px;
-  -webkit-border-radius:12px;
-  -moz-border-radius:12px;
-  -ms-border-radius:12px;
-  -o-border-radius:12px;
+  border:none;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
 }
-.btn{
+
+.btn {
   @include flexCenterX;
-  @include flexCenterY;  
+  @include flexCenterY;
   margin-top: 1em;
   color: $colorRed;
   padding: 5px 7px;
   background-color: $white;
   cursor: pointer;
 }
-.input{
+
+.input {
   @include flexCenterX;
-  @include flexCenterY;  
+  @include flexCenterY;
   margin-top: 1em;
   color: $colorRed;
   padding: 5px 7px;
   background-color: $white;
   border: none;
 }
-.content-btn{
+
+.content-btn {
   width: 220px;
   display: flex;
   margin-bottom: 1em;
-  .start{
+
+  .start {
     @extend .btn;
     width: 150px;
     margin-right: 1em;
@@ -116,10 +123,12 @@ body {
     -moz-border-radius: 5px 0 0 5px;
     -ms-border-radius: 5px 0 0 5px;
     -o-border-radius: 5px 0 0 5px;
-    &:hover{
+
+    &:hover {
       color: $colorBlue;
     }
-}
+  }
+
   .start-submit {
     @extend .btn;
     width: 45px;
@@ -128,20 +137,24 @@ body {
     -moz-border-radius: 0 5px 5px 0;
     -ms-border-radius: 0 5px 5px 0;
     -o-border-radius: 0 5px 5px 0;
-    &:hover{
+
+    &:hover {
       color: $colorBlue;
     }
-    img{
+
+    img {
       width: 100%;
     }
   }
 }
+
 /*Lucky */
-.content-btn{
+.content-btn {
   width: 220px;
   display: flex;
   margin-bottom: 1em;
-  .lucky{
+
+  .lucky {
     @extend .input;
     height: 45px;
     width: 150px;
@@ -154,7 +167,8 @@ body {
     -ms-border-radius: 5px 0 0 5px;
     -o-border-radius: 5px 0 0 5px;
   }
-  .lucky-submit{
+
+  .lucky-submit {
     @extend .btn;
     width: 45px;
     height: 45px;
@@ -164,20 +178,23 @@ body {
     -ms-border-radius: 0 5px 5px 0;
     -o-border-radius: 0 5px 5px 0;
   }
+
   img {
     width: 100%;
   }
 }
-.lucky-label{
+
+.lucky-label {
   margin-bottom: -11px;
   margin-left: -65px;
   color: $white;
 }
-.content-btn{
+
+.content-btn {
   width: 220px;
   display: flex;
   margin-bottom: 1em;
-  .tips{
+  .tips {
     @extend .btn;
     width: 150px;
     margin-right: 1em;
@@ -186,10 +203,12 @@ body {
     -moz-border-radius: 5px 0 0 5px;
     -ms-border-radius: 5px 0 0 5px;
     -o-border-radius: 5px 0 0 5px;
-    &:hover{
+
+    &:hover {
       color: $colorBlue;
     }
-}
+  }
+
   .tips-submit {
     @extend .btn;
     width: 45px;
@@ -198,18 +217,24 @@ body {
     -moz-border-radius: 0 5px 5px 0;
     -ms-border-radius: 0 5px 5px 0;
     -o-border-radius: 0 5px 5px 0;
-    &:hover{
+
+    &:hover {
       color: $colorBlue;
     }
-    img{
+
+    img {
       width: 100%;
     }
   }
 }
+
 /* RIGHT SIDE */
 .container__rightside {
   &-score {
     @extend .input;
+    text-align: center;
+    font-size: 2em;
+    width: 250px;
     height: 60px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
