Add bg random images

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@
 @import "assets/css/reset";
 @import "assets/css/fonts";
 @import "assets/css/main";
+@import "assets/css/left";
+@import "assets/css/center";
+@import "assets/css/right";
 @import "assets/css/menu";
 @import "assets/css/header";
 @import "assets/css/small";
