--- a/src/assets/css/_center.scss
+++ b/src/assets/css/_center.scss
@@ -1,6 +1,91 @@
 .container__center {
-}
-    .center_img{
-      object-fit: cover;
-      min-width: 760px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  &.center_img {
+    object-fit: cover;
+    min-width: 760px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .title_president{
+    height: 80px;
+    font-size: 2rem;
+    font-family: 'Garamond';
+    width: 100%;
+    text-align: center;
+    line-height: 80px;
+    background-color: $colorFade;
+    span{
+      visibility: hidden;
     }
+    span:nth-child(1) {
+      margin-right: 1em;
+    }
+  }
+}
+.rules{
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  padding: 1em;
+  color: $white;
+  background-color: rgba(43, 162, 214, 0.9);
+  width: 80%;
+  border: 1px solid $colorRed;
+  z-index: 2;
+  // max-height: calc(100vh -30px);
+  // overflow-y: scroll;
+  p{
+    font-size: .8rem;
+  }
+  .btn-close{
+    float: right;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1;
+    color: $colorMain;
+    z-index: 3;
+    cursor: pointer;
+  }
+}
+.close{
+  display: none;
+}
+#container__card {
+  position: relative;
+  top: 10px;
+  display: grid;
+  height: 100vh;
+  grid-template-rows: repeat(7, calc(100vh/7));
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 1px;
+  grid-column-gap: 1px;
+  .card {
+    background-color: $white;
+    transition: transform 1s ease-in-out;
+    overflow: hidden;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .3);
+    transform-style: preserve-3d;
+    .card_img {
+      transition: opacity 1s ease-in-out;
+      opacity: 1;
+    }
+
+    // -webkit-backface-visibility: hidden;
+    // backface-visibility: hidden;
+  }
+}
+.rotate{
+    transition: transform 1s ease-in-out;
+    transform: rotateY(180deg);
+    transform-style: preserve-3d;
+}
+.back {
+  transition: transform 1s ease-in-out;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  opacity: 1;
+}
