--- a/src/assets/css/_left.scss
+++ b/src/assets/css/_left.scss
@@ -5,7 +5,7 @@
   &-clock {
     width: 200px;
     padding: 10px;
-    font-size: 3rem;
+    font-size: 1.7rem;
     color: $colorBlue;
     text-align: center;
     border:none;
@@ -16,7 +16,7 @@
     -o-border-radius: 12px;
   }
 }
-  
+
   .btn {
     @include flexCenterX;
     @include flexCenterY;
@@ -26,7 +26,7 @@
     background-color: $white;
     cursor: pointer;
   }
-  
+
   .input {
     @include flexCenterX;
     @include flexCenterY;
@@ -36,12 +36,12 @@
     background-color: $white;
     border: none;
   }
-  
+
   .content-btn {
     width: 220px;
     display: flex;
     margin-bottom: 1em;
-  
+
     .start {
       @extend .btn;
       width: 150px;
@@ -51,13 +51,13 @@
       -moz-border-radius: 5px 0 0 5px;
       -ms-border-radius: 5px 0 0 5px;
       -o-border-radius: 5px 0 0 5px;
-  
+
       &:hover {
         color: $colorBlue;
       }
     }
-  
-    .start-submit {
+
+    .reset {
       @extend .btn;
       width: 45px;
       border-radius: 0 5px 5px 0;
@@ -65,23 +65,23 @@
       -moz-border-radius: 0 5px 5px 0;
       -ms-border-radius: 0 5px 5px 0;
       -o-border-radius: 0 5px 5px 0;
-  
+
       &:hover {
         color: $colorBlue;
       }
-  
+
       img {
         width: 100%;
       }
     }
   }
-  
+
   /*Lucky */
   .content-btn {
     width: 220px;
     display: flex;
     margin-bottom: 1em;
-  
+
     .lucky {
       @extend .input;
       height: 45px;
@@ -95,7 +95,7 @@
       -ms-border-radius: 5px 0 0 5px;
       -o-border-radius: 5px 0 0 5px;
     }
-  
+
     .lucky-submit {
       @extend .btn;
       width: 45px;
@@ -106,18 +106,18 @@
       -ms-border-radius: 0 5px 5px 0;
       -o-border-radius: 0 5px 5px 0;
     }
-  
+
     img {
       width: 100%;
     }
   }
-  
+
   .lucky-label {
     margin-bottom: -11px;
     margin-left: -65px;
     color: $white;
   }
-  
+
   .content-btn {
     width: 220px;
     display: flex;
@@ -131,12 +131,12 @@
       -moz-border-radius: 5px 0 0 5px;
       -ms-border-radius: 5px 0 0 5px;
       -o-border-radius: 5px 0 0 5px;
-  
+
       &:hover {
         color: $colorBlue;
       }
     }
-  
+
     .tips-submit {
       @extend .btn;
       width: 45px;
@@ -145,14 +145,13 @@
       -moz-border-radius: 0 5px 5px 0;
       -ms-border-radius: 0 5px 5px 0;
       -o-border-radius: 0 5px 5px 0;
-  
+
       &:hover {
         color: $colorBlue;
       }
-  
+
       img {
         width: 100%;
       }
     }
   }
-  
